fixed spacing for smaller screens and removed underline

--- a/UI/Content/Site.css
+++ b/UI/Content/Site.css
@@ -116,6 +116,9 @@ textarea {
 .table-responsive {
     overflow-x: hidden;
 }
+a.fa {
+	text-decoration: none !important; 
+}
 
 /*.table .row:nth-child(odd) {
     background-color: lightgray;
